--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ CHAT_HOST=http://chat-service/
 REQUEST_HOST=http://request-service/
 UNI_REQUEST_HOST=http://uni-request-service/
 UNIVERSITY_HOST=http://university-service/
+PORT=8082
