1. Добавил эндпоинт для фиксации факта просмотра пользователем объявления 2. Добавил возможность включить CORS через переменную среды

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,6 +6,10 @@ ktor {
   application {
     modules = [org.astu.ApplicationKt.module]
   }
+  cors {
+    enabled = false
+    enable = ${?ENABLE_CORS}
+  }
   auth {
     host = "https://localhost:50001/"
     host = ${?AUTH_HOST}
@@ -29,5 +33,9 @@ ktor {
   university{
     host = "http://localhost:50000/"
     host = ${?UNIVERSITY_HOST}
+  }
+  bulletinBoard{
+    host = "http://localhost:50000/"
+    host = ${?BULLETIN_BOARD_HOST}
   }
 }
