1. Реализовал регистрацию пользователей 2. Добавил в сваггер документацию api сервиса доски объявлений

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,7 +11,7 @@ ktor {
     enable = ${?ENABLE_CORS}
   }
   auth {
-    host = "https://localhost:50001/"
+    host = "http://localhost:50000/"
     host = ${?AUTH_HOST}
   }
   account {
@@ -34,7 +34,7 @@ ktor {
     host = "http://localhost:50000/"
     host = ${?UNIVERSITY_HOST}
   }
-  bulletinBoard{
+  bulletin-board{
     host = "http://localhost:50000/"
     host = ${?BULLETIN_BOARD_HOST}
   }
