Обновление работы с запросами и шаблонами, также добавил notifyAPI

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 AUTH_HOST=http://auth_service/
+NOTIFY_HOST=http://notify.ttraum.ru/
 ACCOUNT_HOST=http://account-service/
 CHAT_HOST=http://chat-service/
 REQUEST_HOST=http://request-service/
 UNI_REQUEST_HOST=http://uni-request-service/
 UNIVERSITY_HOST=http://university-service/
+NOTIFY_TOKEN=A-HM8DETubSXmBH
 PORT=8082
