--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,6 +14,12 @@ ktor {
     host = "https://localhost:50001/"
     host = ${?AUTH_HOST}
   }
+  notify {
+      host = "https://localhost:50001/"
+      host = ${?NOTIFY_HOST}
+      token = ""
+      token = ${?NOTIFY_TOKEN}
+    }
   account {
     host = "http://localhost:50000/"
     host = ${?ACCOUNT_HOST}
