--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,12 @@ services:
       - internet
     env_file:
       - .env
+  gotify:
+    image: gotify/server
+    ports:
+      - "8081:80"
+    environment:
+      - GOTIFY_DEFAULTUSER_PASS=custom
 networks:
   services-network:
     driver: bridge
