Добавил docker compose файл, использующий образы с docker hub

--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ CHAT_HOST=http://chat-service/
 REQUEST_HOST=http://request-service/
 UNI_REQUEST_HOST=http://uni-request-service/
 UNIVERSITY_HOST=http://university-service/
+BULLETIN_BOARD_HOST=http://bulletin-board-service/
 NOTIFY_TOKEN=A-HM8DETubSXmBH
 PORT=8082
